# CollegeFolderProgram_Final

./: GUI.py  LICENSE  README.md  fileOrganizerMidterm.py  main.py  pyproject.toml  webLogin&Scrape.py  webLoginAndScrape.py
src/CollegeFolderProgram_JosiahP/: ClassManagementApp.py  GUI.py  main.py  webLoginAndScrape.py
